# satisfactory-formats

./: Cargo.toml  README.md
crates/satisfactory-blueprints/: Cargo.toml
crates/satisfactory-blueprints/src/: blueprint.rs  config.rs  lib.rs
crates/satisfactory-common/: Cargo.toml
crates/satisfactory-common/src/: errors.rs  lib.rs  macros.rs
crates/satisfactory-common/src/types/: array.rs  color.rs  mod.rs  string.rs  vector.rs
crates/satisfactory-format-cli/: Cargo.toml
crates/satisfactory-format-cli/src/: main.rs
crates/satisfactory-saves/: Cargo.toml
data/blueprints/: 2x foundry.sbp  2x foundry.sbpcfg
